--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,27 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <repositories>
+    <repository>
+      <id>BigDecimalMath-mvn-repo</id>
+      <url>https://raw.github.com/miraclefoxx/BigDecimalMath/mvn-repo/</url>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.github.miraclefoxx</groupId>
+      <artifactId>bigdecimal-math</artifactId>
+      <version>1.0</version>
     </dependency>
   </dependencies>
   <build>
